# bingosync

./: .dockerignore  .env.example  .flake8  .gitignore  COMPREHENSIVE_REPOSITORY_ANALYSIS.md  DEPLOYMENT.md  DOCKER-QUICK-REFERENCE.md  LOCAL-DEV.md  README-DEV.md  README.md  TESTING.md  dev-setup.sh  docker-compose.dev.yml  docker-compose.yml  flake.nix  nginx.conf  pyproject.toml
.kiro/specs/hp-bingo-platform-transformation/: .config.kiro  HP_COS_GENERATOR_ANALYSIS.md  design.md  requirements.md  tasks.md
bingosync-app/: .dockerignore  Dockerfile  Dockerfile.dev
bingosync-app/bingosync/: admin.py  decorators.py  forms.py  goals_converter.py  middleware.py  permissions.py  publish.py  settings.py  test_bingosync.py  urls.py  util.py  validators.py  views.py  widgets.py
bingosync-app/bingosync/generators/: __init__.py  bingo_generator.py  (+2 more)
bingosync-app/generators/: celeste_beta_generator.js  hp_cos_generator.js  hp_cos_goal_list.js
bingosync-app/tests/: README.md  __init__.py  test_fog_of_war_roles.py  test_form_validation.py  test_gamemaster_assignment.py  test_hp_cos_generator.py  test_internal_api_auth.py  test_join_room_role.py  test_one_room_per_user.py  test_password_reset.py  test_permission_integration.py  test_role_change.py  test_role_permissions.py  test_security_headers.py  test_user_login.py  test_user_registration.py  test_validators.py
bingosync-websocket/: .dockerignore  Dockerfile  Dockerfile.dev  app.py  run_tests.py
bingosync-websocket/tests/: README.md  __init__.py  test_internal_api_auth.py  test_websocket_origin_validation.py
(+50 files in other folders)
