[project]
name = "bingosync"
version = "1.0.0"
description = "Bingo synchronization platform"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2022.12.7",
    "chardet~=5.1",
    "Django~=4.1",
    "django-crispy-forms~=1.14",
    "django-url-tools-py3==0.2.1",
    "django-database-url~=1.0",
    "django-ratelimit~=4.1",
    "idna~=3.4",
    "pytz>=2022.7",
    "requests~=2.28",
    "requests-unixsocket",
    "six~=1.16",
    "tblib~=1.7",
    "tornado~=6.2",
    "urllib3~=1.26",
    "crispy-bootstrap3",
    "django-bootstrap3",
    "psycopg2-binary",
    "redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
